# creative-generation

./: .env  .gitignore  Dockerfile  README.md  aio_consumer.py  aio_producer.py  alembic.ini  bot_task.py  consumer.py  main.py  midjourney-api.service  midjourney-bot.service  midjourney-consumer.service  midjourney.service  producer.py  pyproject.toml  requirements.txt  worker-start.sh
alembic/: env.py
alembic/versions/: 10a03a5c58bb_init.py  b9f74c0bc0fe_init.py  eb72abd76e88_update_table.py
app/: __init__.py  api.py  config.py  db.py  dependency.py  discord_api.py  discord_bot.py  model.py  models.py  schemas.py  utils.py  worker.py
docs/: API文档.md  PRD.md  discord_api.md  pattern_preset.md  prompts.md  技术文档.md
examples/: discord_bot_test.py  rate_limte.py
